# spackle-examples

./: README.md
node/express/: index.ts  package-lock.json  package.json
node/express/spackle-node/: package.json
node/express/spackle-node/src/: Spackle.ts  index.ts
node/express/spackle-node/src/stores/: DynamoDBStore.ts  Store.ts  index.ts
node/express/templates/: index.html
php/nginx/: Dockerfile  README.md  docker-compose.yml
php/nginx/src/: composer.json  index.php
php/nginx/src/Spackle/lib/: Spackle.php
php/nginx/src/templates/: index.html
python/flask/: Makefile  README.md  app.py  build.sh  pyproject.toml
python/flask/app/: app.py
python/flask/app/templates/: index.html
ruby/sinatra/: Gemfile  app.rb
ruby/sinatra/templates/: index.html
templates/: index.html
